# glue

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  codecov.yml  install.ps1  install.sh  justfile  prek.toml  skills.sh.json
cli/gluegen/: Cargo.toml
cli/gluegen/src/: main.rs
cli/gluegen/src/codegen/: ts_def.rs  ts_zod.rs  types.rs
cli/gluegen/src/snapshots/: gluegen__tests__zod_basic.snap
cli/gluegen/tests/snapshots/zod_basic/: in.glue
glue/: .gitignore  Cargo.toml
glue/assets/: config_schema.glue  config_schema.json  config_schema.ts
glue/cli/: Cargo.toml
glue/cli/assets/: config_schema.json
glue/cli/benches/: codegen_perf.rs
glue/cli/benches/fixtures/perf/: perf_dep_alpha.glue  perf_dep_beta.glue  perf_dep_gamma.glue  perf_main.glue
glue/cli/examples/python_pydantic/: .gluerc.yaml  generate.sh  pyproject.toml
glue/cli/examples/python_pydantic/src/: custom_models.py  generated_models.py  main.py
glue/cli/examples/rust_serde/: .gluerc.yaml  Cargo.toml  generate.sh  models.glue
glue/cli/examples/rust_serde/src/: generated_models.rs  main.rs
glue/cli/src/: args.rs  cli.rs  lib.rs  main.rs  test_utils.rs
glue/cli/src/cli/: args.rs  glue_cli.rs  mod.rs  subcommand_gen.rs  test_utils.rs  utils.rs
glue/cli/src/cli/snapshots/: cli__cli__subcommand_gen__tests__jsonschema_basic.snap  cli__cli__subcommand_gen__tests__python_pydantic_basic.snap  cli__cli__subcommand_gen__tests__rust_serde_basic.snap  glue__cli__subcommand_gen__tests__jsonschema_basic.snap  glue__cli__subcommand_gen__tests__openapi_basic.snap  glue__cli__subcommand_gen__tests__python_pydantic_basic.snap
glue/cli/src/codegen/: config_schema_generated.rs  jsonschema.rs  mod.rs  openapi.rs  python_pydantic.rs  rust_serde.rs  types.rs  utils.rs
glue/cli/src/codegen/snapshots/: glue__codegen__jsonschema__tests__config_schema.snap  glue__codegen__jsonschema__tests__jsonschema_basic.snap
glue/cli/src/test/: test.rs
glue/cli/src/test/fixtures/: .gluerc.yaml  ecommerce.glue  imports_dep01.glue  imports_dep02.glue  imports_dep03.glue  imports_main.glue  movies.glue  todos.glue
glue/cli/src/test/snapshots/: cli__test__test__gen_openapi_movies.snap  cli__test__test__gen_openapi_todos.snap  (+5 more)
glue/cli/tests/: e2e_tests.rs  e2e_tests_aws.rs  e2e_tests_go_openapi.rs
glue/cli/tests/snapshots/: e2e_tests__e2e_cli_python_pydantic.snap  e2e_tests__e2e_cli_rust_serde.snap  e2e_tests__e2e_cli_rust_serde.snap.new  e2e_tests__go_ecommerce.snap  e2e_tests__imports.snap
glue/codegen/: Cargo.toml  openapi_types.glue
glue/codegen/src/: codegen.rs  codegen_go.rs  codegen_jsonschema.rs  codegen_openapi.rs  codegen_protobuf.rs  codegen_python.rs  codegen_rust.rs  codegen_typescript.rs  codegen_utils.rs  context.rs  lib.rs  test_utils.rs  types.rs
glue/codegen/src/models/: mod.rs  openapi.rs
glue/codegen/src/snapshots/: codegen__codegen_go__tests__array_types.snap  codegen__codegen_go__tests__enum.snap  codegen__codegen_go__tests__field_alias.snap  codegen__codegen_go__tests__model_reference.snap  codegen__codegen_go__tests__model_with_enum_field.snap  codegen__codegen_go__tests__model_with_optional_fields.snap  codegen__codegen_go__tests__nested_model.snap  codegen__codegen_go__tests__record_type.snap  codegen__codegen_go__tests__simple_model.snap  codegen__codegen_jsonschema__tests__test.snap  codegen__codegen_openapi__tests__basic_endpoint.snap  codegen__codegen_protobuf__tests__basic_endpoint.snap  codegen__codegen_python__tests__attrs.snap  codegen__codegen_python__tests__attrs_alias.snap  codegen__codegen_python__tests__dataclasses.snap  codegen__codegen_python__tests__dataclasses_alias.snap  codegen__codegen_python__tests__msgspec.snap  codegen__codegen_python__tests__msgspec_alias.snap  codegen__codegen_python__tests__nested_model.snap  codegen__codegen_python__tests__pydantic.snap  codegen__codegen_python__tests__record_array.snap  codegen__codegen_python__tests__record_nested_in_model.snap  codegen__codegen_python__tests__record_optional.snap  codegen__codegen_python__tests__record_string_to_any.snap  codegen__codegen_python__tests__record_string_to_int.snap  codegen__codegen_python__tests__test.snap  codegen__codegen_rust__tests__record_array.snap  codegen__codegen_rust__tests__record_nested_in_model.snap  codegen__codegen_rust__tests__record_optional.snap  codegen__codegen_rust__tests__record_string_to_any.snap  codegen__codegen_rust__tests__record_string_to_int.snap  codegen__codegen_rust__tests__test.snap  codegen__codegen_typescript__tests__test_types_only.snap  codegen__codegen_typescript__tests__test_zod.snap  codegen__codegen_typescript__tests__zod.snap
glue/config/: Cargo.toml
glue/config/src/: config.rs  lib.rs  schema.rs
glue/gluegen/: Cargo.toml
glue/gluegen/assets/: config_schema.glue  config_schema.json
glue/gluegen/src/: main.rs
glue/gluegen/src/cli/: cli.rs  glue_cli.rs  mod.rs  subcommand_gen.rs  types.rs
glue/gluegen/src/codegen/: config_schema_generated.rs  jsonschema.rs  mod.rs  python_pydantic.rs  rust_serde.rs  ts_def.rs  ts_zod.rs  types.rs  utils.rs
glue/gluegen/src/snapshots/: gluegen__tests__python_pydantic_basic.snap
glue/gluelang/: Cargo.toml
glue/gluelang/samples/: api.glue  basic.glue  basic.mermaid
glue/gluelang/src/: ast.rs  diagnostics.rs  grammar.pest  lexer.rs  lib.rs  main.rs  parser.rs  semantic.rs  semantic_analysis.rs  semantic_analyzer.rs  semantics.rs  types.rs
glue/gluelang/src/parser/: ast.rs  ast_decorator.rs  ast_endpoint.rs  ast_enum.rs  ast_field.rs  ast_model.rs  ast_type_atom.rs  mod.rs  parse.rs  symbols.rs  tree.rs
glue/gluelang/src/utils/: fuzzy.rs
glue/lang/: Cargo.toml
glue/lang/src/: builtin_decorators.rs  diagnostics.rs  glue_ir.rs  lib.rs  main.rs  metadata.rs  semantic_analyzer.rs  symbols.rs  utils.rs
glue/lang/src/syntax/: ast.rs  ast_traversal.rs  const.rs  grammar.pest  mod.rs  parser.rs
glue/lsp/: Cargo.toml
glue/lsp/src/: lsp.rs  main.rs
glue/wasm/: Cargo.toml
glue/wasm/src/: lib.rs
(+86 files in other folders)
