[workspace]
resolver = "3"
members = ["lang", "codegen", "config", "cli", "lsp", "wasm"]

[workspace.dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
colored = "3.0.0"
convert_case = "0.8.0"
clap = { version = "4.5.48", features = ["derive"] }
json = "0.12.4"
log = "0.4.28"
miette = { version = "7.6.0", features = ["fancy"] }
pretty_env_logger = "0.5.0"
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
rayon = "1.9.0"
regex = "1.11.3"
thiserror = "2.0.16"
pathdiff = "0.2.3"
slotmap = "1.0.7"
# Dev dependencies
indoc = "2.0.6"
insta = { version = "1.43.2", features = ["colors", "console", "json"] }
rand = "0.9.2"
