[workspace]
resolver = "3"
members = ["lang", "codegen", "config", "cli", "lsp", "wasm"]

[workspace.dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
colored = "3.1.1"
convert_case = "0.8.0"
clap = { version = "4.5.60", features = ["derive"] }
json = "0.12.4"
log = "0.4.29"
miette = { version = "7.6.0", features = ["fancy"] }
pretty_env_logger = "0.5.0"
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
rayon = "1.12.0"
regex = "1.12.3"
thiserror = "2.0.18"
pathdiff = "0.2.3"
slotmap = "1.1.1"
# Dev dependencies
indoc = "2.0.7"
insta = { version = "1.47.2", features = ["colors", "console", "json"] }
rand = "0.9.2"
