[package]
name = "gluegen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
gluelang = { path = "../gluelang" }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.16"

[dev-dependencies]
indoc = "2.0.6"
insta = "1.43.2"
rand = "0.9.2"

[profile.dev.package]
# https://insta.rs/docs/quickstart/#optional-faster-runs
insta.opt-level = 3
similar.opt-level = 3
