[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "glue"
path = "src/main.rs"


[dependencies]
lang = { path = "../lang" }
codegen = { path = "../codegen" }
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
indoc = "2.0.6"
json = "0.12.4"
log = "0.4.28"
miette = { version = "7.6.0", features = ["fancy"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.16"

[dev-dependencies]
indoc = "2.0.6"
insta = "1.43.2"
rand = "0.9.2"
