[package]
name = "cli"
version = "0.0.11"
edition = "2024"

[[bin]]
name = "glue"
path = "src/main.rs"

[[bench]]
name = "codegen_perf"
harness = false


[dependencies]
lang = { path = "../lang" }
config = { path = "../config" }
codegen = { path = "../codegen" }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
globset = "0.4.16"
json = { workspace = true }
log = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
pretty_env_logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
pathdiff = { workspace = true }

[dev-dependencies]
indoc.workspace = true
insta.workspace = true
rand.workspace = true
testcontainers = { version = "0.27.0", features = ["blocking"] }
