[package]
name = "gluelang"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
indoc = "2.0.6"
log = "0.4.28"
miette = { version = "7.6.0", features = ["fancy"] }
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
pretty_env_logger = "0.5.0"
rayon = "1.10"
regex = "1.11.3"
thiserror = "2.0.16"
