[package]
name = "lang"
version.workspace = true
edition.workspace = true

[dependencies]
pest = { version = "2.8.6", features = ["miette-error"] }
pest_derive = { version = "2.8.6", features = ["grammar-extras"] }

colored = { workspace = true }
indoc = { workspace = true }
log = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
pretty_assertions = { workspace = true, features = ["unstable"] }
pretty_env_logger = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rowan = { version = "0.16.1" }
slotmap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
