[package]
name = "lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
tower-lsp = "0.20"
gluelang = { path = "../gluelang" }
cli = { path = "../cli" }
log = "0.4.28"
indoc = "2.0.6"
anyhow = "1.0.100"
thiserror = "2.0.17"
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
