[package]
name = "lsp"
version.workspace = true
edition.workspace = true

[dependencies]
lang = { path = "../lang" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
tower-lsp = "0.20"
log = { workspace = true }
indoc = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
pretty_assertions = { workspace = true }
